teste com falha

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-	<div class="alert">Devops Thiago Cerqueira Soares.</div>
+	<div class="alert">não Devops Thiago Cerqueira Soares.</div>
 	
 	<div class="container">
 		<div class="logo">
